--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>DESCONTOS | NARREAL</title>
+  <title>NARREAL | Não é experiência é cerveja na real.</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <link rel="icon" type="image/x-icon" href="http://novofocco.com.br/narreal/favicon.ico">
 
   <link rel="canonical" href="http://novofocco.com.br/narreal" />
-<meta property="og:title" content="DESCONTOS | NARREAL" />
+<meta property="og:title" content="NARREAL | Não é experiência é cerveja na real." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://novofocco.com.br/narreal" />
 <meta property="og:image" content="http://novofocco.com.br/narreal/assets/img/shared.png" />
 <meta property="og:image:width" content="512" />
 <meta property="og:image:height" content="512" />
-<meta property="og:site_name" content="DESCONTOS | NARREAL" />
+<meta property="og:site_name" content="NARREAL | Não é experiência é cerveja na real." />
 <meta property="og:description" content="CADASTRE-SE E SEJA UM CERVEJEIRO NA REAL | Ganhe 30% de desconto Na primeira visita e Ganhe  10% de desconto O ano todo! " />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="DESCONTOS | NARREAL" />
+<meta name="twitter:title" content="NARREAL | Não é experiência é cerveja na real." />
 <meta name="twitter:description" content="CADASTRE-SE E SEJA UM CERVEJEIRO NA REAL | Ganhe 30% de desconto Na primeira visita e Ganhe  10% de desconto O ano todo!" />
 <meta name="twitter:image" content="http://novofocco.com.br/narreal/assets/img/shared.png" />
 <meta itemprop="image" content="http://novofocco.com.br/narreal/assets/img/shared.png" />
