--- a/index.html
+++ b/index.html
@@ -2575,68 +2575,6 @@ function TestaCPF(strCPF) {
     c0.1,1.1,0.6,1,0.8,1L61.8,520.9z"/>
 </g>
 <g>
-  <path class="st3" d="M127.6,517.7l14.8-1.2l0.2,1.7l-12.7,1.1l0.8,9.5l9.7-0.9l0.2,1.7l-9.7,0.9l0.9,10.1l12.8-1.1l0.2,1.7
-    l-14.8,1.2L127.6,517.7z"/>
-  <path class="st3" d="M146.3,539.7l-0.2-1.7c2,0.9,4.6,1.3,7.2,1.1c4.4-0.4,6.1-2.5,5.8-5.5c-0.3-3-2.1-4-5.4-4.8l-2.1-0.5
-    c-4.1-1-6.1-2.5-6.5-6.2c-0.3-3.5,2-6.4,7.1-6.8c2.9-0.3,4.8,0.3,6.2,0.9l0.2,1.7c-1.4-0.6-3.5-1.1-6.3-0.9
-    c-3.6,0.3-5.4,2.2-5.1,4.8c0.2,2.8,1.4,3.8,5.1,4.7l2.1,0.5c3.9,1,6.5,2.2,6.9,6.3c0.4,4.2-1.9,7.2-7.6,7.6
-    C150.6,541.1,148,540.5,146.3,539.7z"/>
-  <path class="st3" d="M168.8,516l-8.2,0.7l-0.2-1.7l18.4-1.5l0.2,1.7l-8.2,0.7l1.9,23l-2,0.2L168.8,516z"/>
-  <path class="st3" d="M186.3,512.8l2-0.2l11.5,23.9l-2.1,0.2l-3.6-7.5l-10.8,1l-2.3,8.1l-2,0.2L186.3,512.8z M183.6,528.3l9.5-0.8
-    l-5.7-12h-0.1L183.6,528.3z"/>
-  <path class="st3" d="M200,511.6l3.1-0.3l10.1,21.3h0.1l6.4-22.7l3.1-0.3l2.1,24.7l-2.1,0.2l-1.9-22.2h-0.1l-6.5,22.8l-1.9,0.2
-    L202.1,514H202l1.9,22.2l-1.9,0.2L200,511.6z"/>
-  <path class="st3" d="M227.1,522l-0.1-0.6c-0.7-7.8,3.2-12.8,9.8-13.4c6.6-0.6,11.2,3.4,11.8,11.6l0.1,0.6
-    c0.7,7.8-3.2,12.8-9.8,13.3C232.4,534.2,227.8,530.1,227.1,522z M246.7,520.7l-0.1-0.9c-0.6-6.7-3.8-10.5-9.6-10
-    c-5.4,0.5-8.3,4.7-7.7,11.2l0.1,0.9c0.6,6.7,3.8,10.5,9.6,10C244.5,531.4,247.2,527.1,246.7,520.7z"/>
-  <path class="st3" d="M251.1,530.8l-0.2-1.7c2,0.9,4.6,1.3,7.2,1.1c4.4-0.4,6.1-2.5,5.8-5.5c-0.3-3-2.1-4-5.4-4.8l-2.1-0.5
-    c-4.1-1-6.1-2.5-6.5-6.2c-0.3-3.5,2-6.4,7.1-6.8c2.9-0.3,4.8,0.3,6.2,0.9l0.2,1.7c-1.4-0.6-3.5-1.1-6.3-0.9
-    c-3.6,0.3-5.4,2.2-5.1,4.8c0.2,2.8,1.4,3.8,5.1,4.7l2.1,0.5c3.9,1,6.5,2.2,6.9,6.3c0.4,4.2-1.9,7.2-7.6,7.6
-    C255.4,532.2,252.8,531.6,251.1,530.8z"/>
-  <path class="st3" d="M273.7,518.1l-0.1-0.7c-0.8-8.5,3.5-12.7,10.1-13.3c2.9-0.3,4.7,0.2,6.3,0.9l0.2,1.7c-1.8-0.7-3.7-1.1-6.4-0.9
-    c-5.4,0.5-8.6,4-8,11.1l0.1,1c0.6,6.9,3.5,10.5,9.6,10c3.2-0.3,5-1.2,6.5-2.2l0.2,1.7c-1.4,1-3.4,1.9-6.8,2.2
-    C278.6,530.3,274.4,526.2,273.7,518.1z"/>
-  <path class="st3" d="M293.6,503.7l2-0.2l1,11l14-1.1l-1-11l2-0.2l2.1,24.7l-2,0.2l-1.1-11.9l-14,1.1l1.1,11.9l-2,0.2L293.6,503.7z"
-    />
-  <path class="st3" d="M316.4,501.8l14.8-1.2l0.2,1.7l-12.7,1.1l0.8,9.5l9.7-0.9l0.2,1.7l-9.7,0.9l0.9,10.1l12.8-1.1l0.2,1.7
-    l-14.8,1.2L316.4,501.8z"/>
-  <path class="st3" d="M333.8,513.2l-0.1-0.6c-0.8-8.8,3.9-13,10.5-13.6c3.2-0.3,5.1,0.3,6.6,0.8l0.2,1.7c-1.6-0.6-3.4-1.1-6.7-0.9
-    c-6.4,0.6-8.9,5.3-8.3,11.4l0.1,0.9c0.6,6.5,3.2,10.4,10.2,9.8c2.1-0.2,3.9-0.7,5.3-1.2l-0.7-7.6l-5.7,0.5l-0.1-1.7l7.7-0.7
-    l0.9,10.5c-1.9,0.9-4.3,1.6-7.4,1.9C339,525.1,334.5,521.4,333.8,513.2z"/>
-  <path class="st3" d="M362.8,497.9l2-0.2l11.5,23.9l-2.1,0.2l-3.6-7.5l-10.8,1l-2.3,8.1l-2,0.2L362.8,497.9z M360.2,513.3l9.5-0.8
-    l-5.7-12h-0.1L360.2,513.3z"/>
-  <path class="st3" d="M376.4,496.7l2.5-0.2l15.5,20.2l0,0l-1.8-21.3l1.9-0.2l2.1,24.7l-2.1,0.2l-15.9-20.8h-0.1l1.8,22l-1.9,0.2
-    L376.4,496.7z"/>
-  <path class="st3" d="M399.4,494.8l7-0.6c7.9-0.7,12.3,2.8,13,10.9l0.1,0.6c0.7,8-2.8,12.6-10.9,13.3l-7,0.6L399.4,494.8z
-     M408.3,517.2c6.7-0.6,9.5-3.9,8.9-11.1l-0.1-0.9c-0.6-7.4-4.3-9.8-10.9-9.3l-4.8,0.4l1.8,21.2L408.3,517.2z"/>
-  <path class="st3" d="M421.3,505.6l-0.1-0.6c-0.7-7.8,3.2-12.8,9.8-13.4c6.6-0.6,11.2,3.4,11.8,11.6l0.1,0.6
-    c0.7,7.8-3.2,12.8-9.8,13.3C426.5,517.7,422,513.6,421.3,505.6z M440.8,504.3l-0.1-0.9c-0.6-6.7-3.8-10.5-9.6-10
-    c-5.4,0.5-8.3,4.7-7.7,11.2l0.1,0.9c0.6,6.7,3.8,10.6,9.6,10C438.7,515,441.4,510.7,440.8,504.3z"/>
-  <path class="st3" d="M451.4,490.3l14.8-1.2l0.2,1.7l-12.7,1.1l0.8,9.5l9.7-0.9l0.2,1.7l-9.7,0.9l0.9,10.1l12.8-1.1l0.2,1.7
-    l-14.8,1.2L451.4,490.3z"/>
-  <path class="st3" d="M469.9,488.8l3.1-0.3l10.1,21.3h0.1l6.4-22.7l3.1-0.3l2.1,24.7l-2.1,0.2l-1.9-22.2h-0.1l-6.5,22.8l-1.9,0.2
-    L472,491.2h-0.1l1.9,22.2l-1.9,0.2L469.9,488.8z"/>
-  <path class="st3" d="M503,486l9.6-0.9c5.7-0.5,8.7,1.4,9,5.5c0.2,2.7-0.9,4.7-3.7,5.7v0.2c3.2,0.3,5.4,1.8,5.7,5.4
-    c0.4,4-2.2,7.3-8.4,7.7l-10.2,0.9L503,486z M512.5,495.7c2.4-0.2,4.1-1.1,3.8-3.7c-0.2-2.5-1.6-3.2-4.3-3l-3.2,0.3l0.6,6.7
-    L512.5,495.7z M514,506.2c2.8-0.2,4.1-1.5,3.9-4.1c-0.2-2.5-1.9-3.4-4.8-3.2l-3.5,0.3l0.6,7.3L514,506.2z"/>
-  <path class="st3" d="M524.6,497l-0.1-0.8c-0.7-8.3,4.1-12.8,10.9-13.4c6.8-0.6,12,3,12.7,11.4l0.1,0.8c0.7,8.3-4.1,12.9-10.8,13.5
-    C530.5,509,525.4,505.4,524.6,497z M542.4,496l-0.1-1.2c-0.5-5.4-2.4-8.1-6.7-7.7c-3.9,0.3-5.5,3.4-5.2,8.3l0.1,1.2
-    c0.5,5.4,2.5,8.1,6.6,7.8C541,504,542.8,500.8,542.4,496z"/>
-  <path class="st3" d="M554.5,485.7l-7,0.6l-0.4-4.1l19.5-1.6l0.4,4.1l-7,0.6l1.7,20.6l-5.5,0.5L554.5,485.7z"/>
-  <path class="st3" d="M573.4,480l5.8-0.5l11,24l-5.7,0.5l-2.5-5.5l-8.9,0.8l-1.5,5.8l-5.1,0.4L573.4,480z M574,495.3l6.4-0.6
-    l-3.9-8.9h-0.2L574,495.3z"/>
-  <path class="st3" d="M589.8,478.7l16.2-1.3l0.4,4.1l-10.7,0.9l0.6,6.7l8.3-0.7l0.4,4l-8.3,0.7l0.9,9.9l-5.5,0.5L589.8,478.7z"/>
-  <path class="st3" d="M608,489.9l-0.1-0.8c-0.7-8.3,4.1-12.8,10.9-13.4s12,3,12.7,11.4l0.1,0.8c0.7,8.3-4.1,12.9-10.8,13.5
-    C613.9,501.9,608.7,498.3,608,489.9z M625.7,488.9l-0.1-1.2c-0.5-5.4-2.4-8.1-6.7-7.7c-3.9,0.3-5.5,3.4-5.2,8.3l0.1,1.2
-    c0.5,5.4,2.5,8.1,6.6,7.8C624.4,496.9,626.2,493.8,625.7,488.9z"/>
-  <path class="st3" d="M632.9,487.9l-0.1-0.8c-0.8-9.5,5-13,11.7-13.6c3.3-0.3,5.8,0.2,7.4,0.9l0.4,4.1c-1.5-0.4-3.5-1-6.9-0.7
-    c-5.7,0.5-7.1,4-6.7,8.5l0.1,1.1c0.4,5,1.9,8.1,7.3,7.6c1.2-0.1,2.6-0.5,3.3-0.9l-0.4-4.9l-4.3,0.4l-0.3-3.8l9.6-0.8l1,11.8
-    c-1.8,1-5,2-8.4,2.3C638.9,499.8,633.7,496.8,632.9,487.9z"/>
-  <path class="st3" d="M656,485.9l-0.1-0.8c-0.7-8.3,4.1-12.8,10.9-13.4c6.8-0.6,12,3,12.7,11.4l0.1,0.8c0.7,8.3-4.1,12.9-10.8,13.5
-    C661.9,497.9,656.6,494.3,656,485.9z M673.6,484.9l-0.1-1.2c-0.5-5.4-2.4-8.1-6.7-7.7c-3.9,0.3-5.5,3.4-5.2,8.3l0.1,1.2
-    c0.5,5.4,2.5,8.1,6.6,7.8C672.4,492.8,674,489.8,673.6,484.9z"/>
-</g>
-<g>
   <path class="st1" d="M195.5,582.7l0.5,6.5l-2.7,0.2l-1.2-16.4l4.6-0.3c2.1-0.1,3.7,0.1,4.8,0.9c1.1,0.7,1.7,1.9,1.8,3.5
     c0.1,2-0.8,3.6-2.9,4.6l5.1,6.9l-3,0.2l-4.4-6.3L195.5,582.7z M195.4,580.5l1.9-0.1c1.2-0.1,2.1-0.4,2.7-0.9
     c0.5-0.5,0.8-1.2,0.7-2.1c-0.1-0.9-0.4-1.6-1-1.9c-0.6-0.4-1.6-0.5-2.8-0.4l-1.8,0.1L195.4,580.5z"/>
@@ -2928,34 +2866,34 @@ function TestaCPF(strCPF) {
 
 <svg version="1.1" id="Camada_a" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 592.6 300.1" style="enable-background:new 0 0 592.6 300.1;" xml:space="preserve">
 <style type="text/css">
-  .st0{fill:#EB5646;}
-  .st1{font-family:'grande';}
-  .st2{font-size:54.2442px;}
-  .st3{letter-spacing:-4;}
-  .st4{font-size:95.1049px;}
-  .st5{letter-spacing:-7.1;}
-  .st6{font-size:51.0601px;}
-  .st7{letter-spacing:-3;}
-  .st8{fill:#FFFFFF;}
-  .st9{font-family:'texto';}
-  .st10{font-size:30.2172px;}
-  .st11{letter-spacing:-1;}
-  .st12{font-size:53.4812px;}
-  .st13{font-size:93.7672px;}
-  .st14{letter-spacing:-7;}
-  .st15{font-size:50.3419px;}
+  .descst0{fill:#EB5646;}
+  .descst1{font-family:'grande';}
+  .descst2{font-size:54.2442px;}
+  .descst3{letter-spacing:-4;}
+  .descst4{font-size:95.1049px;}
+  .descst5{letter-spacing:-7.1;}
+  .descst6{font-size:51.0601px;}
+  .descst7{letter-spacing:-3;}
+  .descst8{fill:#FFFFFF;}
+  .descst9{font-family:'texto';}
+  .descst10{font-size:30.2172px;}
+  .descst11{letter-spacing:-1;}
+  .descst12{font-size:53.4812px;}
+  .descst13{font-size:93.7672px;}
+  .descst14{letter-spacing:-7;}
+  .descst15{font-size:50.3419px;}
 </style>
-<text transform="matrix(0.9824 -0.1371 0.136 0.9907 30.1599 89.3437)" class="st0 st1 st2 st3">Ganhe</text>
-<text transform="matrix(0.9824 -0.1371 0.136 0.9907 22.74 167.0051)" class="st0 st1 st4 st5">30%</text>
-<text transform="matrix(0.9824 -0.1371 0.136 0.9907 52.936 203.2781)" class="st0 st1 st6 st7">de desconto</text>
-<text transform="matrix(0.9809 -0.1455 0.1473 0.9891 41.9883 233.0112)" class="st8 st9 st10 st11">Na primeira visita a ser</text>
-<text transform="matrix(0.9809 -0.1455 0.1573 0.9891 42.9883 263.0112)" class="st8 st9 st10 st11">realizada até final de Março</text>
+<text transform="matrix(0.9824 -0.1371 0.136 0.9907 30.1599 89.3437)" class="descst0 descst1 descst2 descst3">Ganhe</text>
+<text transform="matrix(0.9824 -0.1371 0.136 0.9907 22.74 167.0051)" class="descst0 descst1 descst4 descst5">30%</text>
+<text transform="matrix(0.9824 -0.1371 0.136 0.9907 52.936 203.2781)" class="descst0 descst1 descst6 descst7">de desconto</text>
+<text transform="matrix(0.9809 -0.1455 0.1473 0.9891 41.9883 233.0112)" class="descst8 descst9 descst10 descst11">Na primeira visita a ser</text>
+<text transform="matrix(0.9809 -0.1455 0.1573 0.9891 42.9883 263.0112)" class="descst8 descst9 descst10 descst11">realizada até final de Março</text>
 
-<text transform="matrix(0.991 -0.134 0.134 0.991 336.6862 68.1562)" class="st0 st1 st12 st3">Ganhe</text>
-<text transform="matrix(0.991 -0.134 0.134 0.991 262.1763 107.0619)" class="st8 st1 st12 st3">e</text>
-<text transform="matrix(0.991 -0.134 0.134 0.991 329.0648 144.6904)" class="st0 st1 st13 st14">10%</text>
-<text transform="matrix(0.991 -0.134 0.134 0.991 358.97 180.5424)" class="st0 st1 st15 st7">de desconto</text>
-<text transform="matrix(0.9818 -0.139 0.1407 0.99 381.592 203.3345)" class="st8 st9 st10 st11">em todo 2019.</text>
+<text transform="matrix(0.991 -0.134 0.134 0.991 336.6862 68.1562)" class="descst0 descst1 descst12 descst3">Ganhe</text>
+<text transform="matrix(0.991 -0.134 0.134 0.991 262.1763 107.0619)" class="descst8 descst1 descst12 descst3">e</text>
+<text transform="matrix(0.991 -0.134 0.134 0.991 329.0648 144.6904)" class="descst0 descst1 descst13 descst14">10%</text>
+<text transform="matrix(0.991 -0.134 0.134 0.991 358.97 180.5424)" class="descst0 descst1 descst15 descst7">de desconto</text>
+<text transform="matrix(0.9818 -0.139 0.1407 0.99 381.592 203.3345)" class="descst8 descst9 descst10 descst11">em todo 2019.</text>
 </svg>
 
         <div class="row justify-content-center">
