--- a/index.html
+++ b/index.html
@@ -2540,41 +2540,6 @@ function TestaCPF(strCPF) {
     C676.5,430.3,676.7,430.5,676.9,430.5z"/>
 </g>
 <g>
-  <path class="st2" d="M47.8,506.6l688.7-52.8c5-0.3,9.3,4,9.6,9.6l2.2,35.3c0.4,5.5-3.4,10.3-8.4,10.6L51.1,562
-    c-5,0.3-9.3-4-9.6-9.6l-2.1-35.3C39.1,511.6,42.8,506.9,47.8,506.6z M728.6,494.1l-1.1-2.5l-1.2,1.6c0,0.5,1.2,6.5,1.8,6.5
-    L728.6,494.1z M718.6,496.8c0.1,1.1,2.8,2.4,3.1,2.4c-0.4-1-1.2-1.9-1.9-3C719.5,496.2,718.6,496.3,718.6,496.8z M69.4,546.7h-0.5
-    c0.1,1.1,2.8,1.8,3.2,1.8h0.5c-0.1-1.1-1.1-2.5-1.3-3L69.4,546.7z M738.7,493.1c0.3,0.5,0.7,1,1,1c0.6,0,1.1-1.1,1.1-2.1
-    c0-0.5-1-1-1.2-1L738.7,493.1z M734.3,492.3l-1-1l-0.5,1.1l0.7,1L734.3,492.3z M81.3,538.4l-2.1,1.1l2.1,2.9
-    c1.1-0.6,2.6-0.7,3.7-1.7L81.3,538.4z M76.5,542.2l0.9-1.5l-0.2-3.1l-0.5-3.5l-0.8-0.5c0.2,2.5-1.1,4.6-2.3,5.2l0.4,2L76.5,542.2z
-     M87.4,541.5l0.4-1.1c0-0.5-0.1-1.1-0.3-1c-0.2,0-0.5,0.6-0.7,1.1L87.4,541.5z M707.3,490.9l-0.5,1.1c0,0.5,0.1,1.1,0.7,1
-    c0.6,0,0.9-0.6,1.3-1.1L707.3,490.9z M713.4,491.6l0.4,1l0.8-1.1l-0.3-0.5L713.4,491.6z M701.2,490.3c-0.3,0-1.1,0.6-1.1,1.1
-    c0.1,1.1,1.5,1.4,2.1,1.4L701.2,490.3z M58.4,538.8l-0.4,2l0.8,1.4l1.8-1.1l0.4-1.5l-0.8-1.4L58.4,538.8z M65.3,538.4h-0.5
-    c-0.5,0-1.1,0.6-1.5,1.6v1.1c0.3,0.5,0.8,1,1.1,1c0.5,0,1-0.6,1.3-1.1l0.4-1.5L65.3,538.4z M68.7,540.2l1.1,1l1.1-0.6l-0.6-1.5
-    l-0.8-0.5h-0.5L68.7,540.2z M697.3,490.5c-0.3,0-0.2,1.1-0.2,1.1v0.5c0.3,0,0.6-0.6,0.5-1.1L697.3,490.5z M739.3,483.4l-2.2,2.2
-    l1.5,1.9l1.3-2.6L739.3,483.4z M104.1,536.5l2.1-1.1l-0.1-1.5l-2.2-0.9L104.1,536.5z M732.3,483.3l-3.6,2.8l3.8,1.2l1-2.6
-    L732.3,483.3z M108.5,533.7l-0.5,0.6l0.3,1.5l0.5-0.6L108.5,533.7z M114.4,532.4l-0.7,1.1l0.3,1.5l0.3,0.5c0.5,0,0.5-0.6,0.7-1.1
-    L114.4,532.4z M727.2,485.2l-0.4-1l-3.7,1.2l0.4,1.5l1.4,0.4l1.7-0.6L727.2,485.2z M87.1,535.5l0.8,1l2.3-1.6
-    c-0.6-1.5-1.5-1.4-2.2-1.3h-0.5L87.1,535.5z M92.8,535.1l-0.5,0.6h0.5V535.1z M718.9,483.2l-1.3,2.6l1.5,1l1.3-2.1L718.9,483.2z
-     M712.8,483l-2.2,2.2l0.1,1.5l2.9-0.2l0.8-2.1L712.8,483z M81.3,534.4l1.2,1l0.4-1.5l-1.1-1.4L81.3,534.4z M704.3,486l1.4,0.4
-    l1.9-1.6c0.2-1.1,0.5-1.5,0.4-2.6c-0.2-2.5-2.5-3.3-3.7-3.3c-0.9,0.1-2,0.7-1.9,2.7L704.3,486z M69.8,531l-1.6,1.1l0.1,1.1
-    c0.1,1.5,0.8,1.4,1.2,1.4c0.7,0,1.6-0.1,2.3-1.1C71.4,532.5,70.6,531.5,69.8,531z M65.7,534.3c0.2,0,0.5-0.6,0.4-1.1
-    c0-0.5-0.3-0.5-0.3-1l-0.8-0.5l-0.2,1.5L65.7,534.3z M62.2,532l0.1,1.1l0.6,1l0.2-1.1c0-0.5-0.1-1.1-0.6-1H62.2z M59.3,531.6
-    l0.1,1.1l0.3,0.5l0.4-1.1c0-0.5-0.3-0.5-0.5-0.5H59.3z M738.9,477.3l-0.9,0.6l0.5,2.5l1.3-1.1L738.9,477.3z M96.7,528.8
-    c0.3,0.5,0.6,1,0.8,1v-0.5c-0.1-1.1-0.4-2-0.7-2.5L96.7,528.8z M726.1,476.7l-1.1,2.1l1,2l1.1-1.1L726.1,476.7z M90.3,529.2
-    l2.5-2.2v-3.5c0-0.5-0.1-1.5-0.6-1.5l-2.6,5.3l-0.2,1.1L90.3,529.2z M732.5,476.2l-0.8,1.5l1,1.4l0.8-1.1L732.5,476.2z M84.2,527.6
-    l-0.6-1.5l-2.2-0.9l-2.8,1.1l-0.4,1.5l0.6,1.5H79c1.6-0.1,3.2-2.2,5-0.8L84.2,527.6z M95.1,528.4l-0.3-1l-0.2,0.5L95.1,528.4z
-     M719.3,470l-1.5-1.4l-1.1,0.1c-0.9,0.1-1.4,0.6-1.3,2.1c0.1,1.5,0.8,3.5,1.4,4.5c-0.3-0.5-1-1-1.5-1c-1.1,0.1-2.5,2.7-2.3,4.7
-    c0.1,2,2.2-2.7,6.1,0.7l2.9-0.2l0.8-1.5l-0.7-1.4l-5.3-1.3l2.1-3.2L719.3,470z M729.4,478.5l-0.6-0.5l0.4,1L729.4,478.5z
-     M76.3,527.6c0.4-1.1,0.6-2.6,0.5-4.1c-0.1-2-0.8-5-1.7-5c-0.5,0-0.9,1.5-1.1,2.1c0.3,1,0.6,2,0.7,3c0.2,2.5-0.8,3.1-1.4,3.6
-    l0.1,1.1l0.8,1L76.3,527.6z M86.5,528.4l0.9-1.1l-0.8-1.4l-0.7,1.1L86.5,528.4z M59.6,528.6l0.6-2.6l-1.1-1c-0.5,0-2.1,1.1-2,2.7
-    c0,0.5,0.6,1,0.8,1.4L59.6,528.6z M69.2,523.5l-0.4,2l-1.1,2.1l1.7,0.9c1.3-1.6,2.6-4.7,3.2-7.7c-0.1-2-1.3-1.9-1.8-1.9
-    c-1.9,0.1-3.9,1.7-5.5,3.3l3.3,0.3L69.2,523.5z M61.9,526.9l0.3,0.5l1.2,1l1.4-0.6l0.4-1.5l-0.6-1.5l-2.8,1.1V526.9z M735.3,470
-    l-0.2,1.5l2.4,1.3l1.3-2.1c-0.1-1.5-1-1.4-1.5-1.4L735.3,470z M723.3,468.7l-1.9,2.1c1.2,1,2.4,1.9,3.6,2.3l1.3-2.6l-1.3-2.5
-    L723.3,468.7z M731.1,468.3l-2.5,1.7l-0.2,2l0.3,0.5l2,0.4l1.1-0.1l1-3.1L731.1,468.3z M79.4,518.8l-1.7,2.7l0.6,1
-    c1.8-1.1,3.9,0.8,5.4-1.3C82.5,519.1,80.5,518.7,79.4,518.8z M61.8,520.9c-0.6-1-1.3-1.9-1.8-1.9c-0.5,0-1.1,0.6-1.1,1.6
-    c0.1,1.1,0.6,1,0.8,1L61.8,520.9z"/>
-</g>
-<g>
   <path class="st1" d="M195.5,582.7l0.5,6.5l-2.7,0.2l-1.2-16.4l4.6-0.3c2.1-0.1,3.7,0.1,4.8,0.9c1.1,0.7,1.7,1.9,1.8,3.5
     c0.1,2-0.8,3.6-2.9,4.6l5.1,6.9l-3,0.2l-4.4-6.3L195.5,582.7z M195.4,580.5l1.9-0.1c1.2-0.1,2.1-0.4,2.7-0.9
     c0.5-0.5,0.8-1.2,0.7-2.1c-0.1-0.9-0.4-1.6-1-1.9c-0.6-0.4-1.6-0.5-2.8-0.4l-1.8,0.1L195.4,580.5z"/>
@@ -2903,6 +2868,7 @@ function TestaCPF(strCPF) {
 
                         
             <form class="cadastro-real py-5">
+              <p class="text-center text-white">Promoção não acumulativa com outras promoções da casa. Benefício intransponível.</p>
               <div class="form-group">
                   <label for="nomeReal" class="">Nome</label>
                   <input type="text" class="form-control" id="nomeReal" name="Nome" aria-describedby="nomeRealhelp" required>
