--- a/index.html
+++ b/index.html
@@ -2814,8 +2814,8 @@ function TestaCPF(strCPF) {
 <text transform="matrix(0.991 -0.134 0.134 0.991 7.5522 141.9025)" class="pos0 pos1 pos5">Na rEAL</text>
 </svg>
 
-<h4 class="texto-normal cor-branca text-center" style="max-width: 500px; margin: 0 auto;">BASTA DAR O SEU CPF E LEVAR UM DOCUMENTO COM FOTO QUANDO VIER AO NARREAL E O SEU BENEFÍCIO ESTÁ GARANTIDO*<br>
-<small>*Benefício válido até o dia 30 de Fevereiro</small>
+<h4 class="texto-normal cor-branca text-center" style="max-width: 500px; margin: 0 auto;">BASTA DAR O SEU CPF E LEVAR UM DOCUMENTO COM FOTO QUANDO VIER AO NARREAL E O SEU BENEFÍCIO ESTÁ GARANTIDO <br>
+<small> </small>
 </h4>
 
 <h1 class="cor-branca text-center compartilharNarreal py-4">
